# Iep

./: Figuri.cpp  Item.md  Pasari.cpp  README.md  comenzi.txt  tema.cpp
CMakeAssignment/: CMakeLists.txt
CMakeAssignment/inc/: CMakeLists.txt  mathFunc.cpp  mathFunc.hpp
CMakeAssignment/src/: main.cpp  mathFunc.cpp
tema2/: Student.cpp  main  main.cpp
tema3/: Materii.cpp  Materii.hpp  SchoolClass.cpp  Student.cpp  Student.hpp  main  main.cpp
tema4/: Bursa.cpp  LockStudent.cpp  Student.cpp  Student.hpp  main.cpp
tema5/: Hotel.cpp  User.cpp  main.cpp
tema6/: hello.c  makefile
